--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -163,6 +163,11 @@ jobs:
             test-crate: 'maturin/test-crates/pyo3-mixed'
           },
           {
+            manylinux: '2_35', # no docker images
+            target: 'x86_64',
+            test-crate: 'maturin/test-crates/pyo3-mixed'
+          },
+          {
             manylinux: '2014',
             target: 'i686-unknown-linux-gnu',
             test-crate: 'maturin/test-crates/pyo3-mixed'
