--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -130,15 +130,14 @@ jobs:
         with:
           rust-toolchain: ${{ matrix.toolchain }}
           args: -m maturin/test-crates/pyo3-pure/Cargo.toml --target aarch64-unknown-linux-gnu
-      - name: maturin build --zig container off
+      - name: maturin build --zig
         uses: ./
         with:
           rust-toolchain: ${{ matrix.toolchain }}
           target: aarch64-unknown-linux-gnu
           args: -m maturin/test-crates/pyo3-pure/Cargo.toml --zig
           manylinux: 'auto'
-          container: 'off'
-      - name: maturin build --zig
+      - name: maturin build --zig container on
         if: matrix.os == 'ubuntu-latest'
         uses: ./
         with:
@@ -146,6 +145,7 @@ jobs:
           target: aarch64-unknown-linux-gnu
           args: -m maturin/test-crates/pyo3-pure/Cargo.toml --zig
           manylinux: 'auto'
+          container: 'on'
       - name: maturin build --zig unsupported target
         if: matrix.os == 'ubuntu-latest'
         uses: ./
