Add support for `universal2-apple-darwin` target

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,12 @@ jobs:
           rust-toolchain: ${{ matrix.toolchain }}
           args: -o dist
           working-directory: maturin/test-crates/pyo3-mixed
+      - name: maturin build universal2 target
+        if: matrix.os == 'macos-latest'
+        uses: ./
+        with:
+          target: universal2
+          working-directory: maturin/test-crates/pyo3-mixed
       - name: maturin build universal2
         if: matrix.os == 'macos-latest'
         uses: ./
