--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -121,13 +121,13 @@ jobs:
           manylinux: 'auto'
       - name: docker pull
         if: matrix.os == 'ubuntu-latest'
-        run: docker pull quay.io/pypa/manylinux_2_24_x86_64:latest
+        run: docker pull quay.io/pypa/manylinux_2_28_x86_64:latest
       - name: maturin build with existing docker image
         if: matrix.os == 'ubuntu-latest'
         uses: ./
         with:
           rustup-components: rustfmt
-          container: quay.io/pypa/manylinux_2_24_x86_64:latest
+          container: quay.io/pypa/manylinux_2_28_x86_64:latest
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml -i python3.10
           manylinux: 'auto'
       - name: maturin build --target args
@@ -159,6 +159,11 @@ jobs:
           rust-toolchain: ${{ matrix.toolchain }}
           target: s390x-unknown-linux-gnu
           args: -m maturin/test-crates/pyo3-pure/Cargo.toml --zig
+          manylinux: 'auto'
+      - name: maturin build cffi project
+        uses: ./
+        with:
+          args: -m maturin/test-crates/cffi-pure/Cargo.toml
           manylinux: 'auto'
 
   test-manylinux:
