--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -167,6 +167,12 @@ jobs:
         with:
           args: -m maturin/test-crates/cffi-pure/Cargo.toml
           manylinux: 'auto'
+      - name: maturin build with sccache
+        uses: ./
+        with:
+          args: -m maturin/test-crates/pyo3-pure/Cargo.toml
+          manylinux: 'auto'
+          sccache: 'true'
 
   test-manylinux:
     name: Manylinux Test Suite
