Add `before-script-linux` option
For running custom script to configure the build environment on Linux,
for example installing clang for rust-bindgen

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,9 @@ jobs:
           rust-toolchain: ${{ matrix.toolchain }}
           args: -o dist
           working-directory: maturin/test-crates/pyo3-mixed
+          before-script-linux: |
+            sudo apt-get update
+            sudo apt-get install -y libclang-dev
       - name: maturin build universal2 target
         if: matrix.os == 'macos-latest'
         uses: ./
@@ -84,6 +87,9 @@ jobs:
         with:
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml -i python3.10 --out dist
           manylinux: '2014'
+          before-script-linux: |
+            yum install -y llvm-toolset-7-clang
+            source /opt/rh/llvm-toolset-7/enable 
       - name: maturin build nightly powerpc64le musl
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
         uses: ./
