--- a/action.yml
+++ b/action.yml
@@ -46,6 +46,9 @@ inputs:
     description: Enable sccache for faster builds.
     required: false
     default: 'false'
+  before-script-linux:
+    description: Script to run before maturin command on Linux.
+    required: false
 
 runs:
   using: 'node16'
