--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,9 @@ inputs:
   docker-options:
     description: Additional Docker run options, for passing environment variables and etc.
     required: false
+  host-home-mount:
+    description: Host folder where the runner's home folder is mounted to. Used for building using Docker-in-Docker runners
+    required: false
   target:
     description: The --target option for cargo
     required: false
