--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@actions/exec": "^1.1.1",
     "@actions/glob": "^0.3.0",
     "@actions/tool-cache": "^2.0.1",
-    "@iarna/toml": "^3.0.0",
+    "@iarna/toml": "github:AlexTMjugador/iarna-toml#fix/comment-crlf",
     "string-argv": "^0.3.1",
     "typescript": "^4.6.2"
   },
