--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,10 @@ jobs:
           node-version: '16'
       - name: npm install
         run: npm install
-      - name: lint
+      - name: lint JavaScript
         run: npm run lint
-
+      - name: lint Python
+        run: pipx ruff check
   test:
     name: Test Suite
     runs-on: ${{ matrix.os }}
