GitHub Actions: Lint Python code with ruff (#310)
* GitHub Actions: Lint Python code with ruff

https://docs.astral.sh/ruff is an extremely fast Python linter and code formatter, written in Rust. With [over 800 linting rules](https://docs.astral.sh/ruff/rules), ruff can be used to replace [Flake8](https://pypi.org/project/flake8/) (plus dozens of plugins), [Black](https://github.com/psf/black), [isort](https://pypi.org/project/isort/), [pydocstyle](https://pypi.org/project/pydocstyle/), [pyupgrade](https://pypi.org/project/pyupgrade/), [autoflake](https://pypi.org/project/autoflake/), and more, all while executing tens or hundreds of times faster than any individual tool.

* pipx run ruff check

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,10 @@ jobs:
           node-version: '16'
       - name: npm install
         run: npm install
-      - name: lint
+      - name: lint JavaScript
         run: npm run lint
+      - name: lint Python
+        run: pipx run ruff check
 
   test:
     name: Test Suite
